test/testdata/classes/methods/static/invalid_property_access_error.lox
class Foo {
  static bar() {}
}
// error: property access is not valid for 'function' value
// lint warning: property 'x' has not been declared or assigned anywhere
Foo.bar.x;
